# web-server

./: .env  .env.example  .gitignore  404.html  Cargo.toml  Dockerfile  Dockerfile.dev  cloudbuild.yaml  docker-compose.yml  mathilde.html  object_design.md  project_log.md
doc/: api_quick.md  element.md  high_level_projects.md  landmark.md  pipeline_issues.md  publication_v2.md  reference.md  trace_mirror.md  v2_cutover_checklist.md
migrations/2023-08-25-144404_create_users/: up.sql
migrations/2023-08-28-082858_create_sessions/: up.sql
migrations/2023-08-28-141703_create_article_table/: up.sql
migrations/2023-09-04-110125_create_comment/: up.sql
migrations/2023-09-06-091520_add_draft_mode_to_article/: down.sql  up.sql
migrations/2023-09-07-140820_create_thought_input/: down.sql  up.sql
migrations/2023-09-11-194740_rename_article_to_thought_output/: down.sql  up.sql
migrations/2023-09-11-201043_add_type_to_thought_output/: down.sql  up.sql
migrations/2023-09-13-084311_create_inpute_usage/: down.sql  up.sql
migrations/2023-09-18-203454_create_category/: down.sql  up.sql
migrations/2023-09-26-161358_rename_resource_fields/: down.sql  up.sql
migrations/2023-09-26-163400_rename_resource_fields_in_inputs/: down.sql  up.sql
migrations/2023-09-28-143304_rename_interaction_fields/: down.sql  up.sql
migrations/2023-09-29-173959_migrate_thought_inputs_to_thought_outputs/: down.sql  up.sql
migrations/2023-10-04-084415_rename_table_to_interaction/: down.sql  up.sql
migrations/2023-10-04-153807_not_null_interaction_user/: down.sql  up.sql
public/: Header.html  article_id.html  create-article.html  edit-article-id.html  hello.html  list-article.html  login.html  mathilde.html  style.css  user-datas.html
src/: database.rs  db.rs  entities.rs  entities_v2.rs  environment.rs  file_converter.rs  handle_connexion.rs  http.rs  httpclient.rs  legacy.rs  lib.rs  link_preview.rs  logging.rs  main.rs  middlewares.rs  openai_handler.rs  pagination.rs  router.rs  schema.rs  sessions_service.rs  threadpool.rs  work_analyzer.rs
test_data/: fakir_docx_article_example.docx  open_graph.html  ps.tex  ps.txt  raw_html.html  schema.html  structured_html.html  tex_example.tex  tex_example_expected_result.txt  twitter.html
(+678 files in other folders)
