[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "*"

[[bin]]
name = "web-server"
path = "src/main.rs"
