[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"]}
rust-argon2 = "0.5"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
regex = "1.9.1"
diesel = { version = "2.1.1", features = ["postgres", "uuid", "chrono", "r2d2"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
scraper = "0.19.0"
encoding = "0.2.33"
encoding_rs = "0.8.34"
docx-rs = "0.4.17"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
r2d2 = "0.8.10"
http = "1.2.0"
urlencoding = "2.1.0"
async-trait = "0.1.89"
anyhow = "1.0.100"

[dev-dependencies]
tokio-test = "*"
hyper = "1.4"

[[bin]]
name = "web-server"
path = "src/main.rs"
